--- a/index.html
+++ b/index.html
@@ -1,9 +1,28 @@
+<!--1ère partie
 <!DOCTYPE html>
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>AZERTYPE</title>
+    <script src="script.js"></script>
+</head>
+<body>
+    
+</body>
+</html>
+-->
+
+<!--2ème partie => à partir Exercice sur les fonctions, 2ème étape-->
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AZERTYPE</title>
+    <script src="config.js"></script>
+    <script src="main.js"></script>
+    <script src="scripts.js"></script>
     <script src="script.js"></script>
 </head>
 <body>
