--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AZERTYPE</title>
-    <script src="config.js"></script>
-    <script src="main.js"></script>
-    <script src="scripts.js"></script>
-    <script src="script.js"></script>
+    
+    <script src="scripts/config.js"></script>
+    <script src="scripts/script.js"></script>
+    <script src="scripts/main.js"></script>
 </head>
 <body>
     
